[tool.poetry]
name = "insta-frame"
version = "0.1.0"
description = "add 1-1-frame to any photo size"
authors = ["Till Hainbach <Till.Hainbach@posteo.de>"]
license = "MIT"
readme = "README.md"
packages = [{include = "insta_frame"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.5.5.62"
Flask = "^2.0.3"
blinker = "^1.4"
gunicorn = "^20.1.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.1.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest = "^7.0.1"
matplotlib = "^3.5.1"
ipykernel = "^6.9.1"

[tool.isort]
profile = "black"

[tool.pyright]
venv = ".venv"
verboseOutput = true
ignore = ["templates", "build"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
